# hawkeye-gemini

./: .gitignore  AGENTS.md  BLOG_POST.md  DEMO_SCRIPT.md  DESIGN_COMPLETION_SUMMARY.txt  DEVPOST_SUBMISSION.md  README.md  README_ROUTE_SAFE_ANALYSIS.md  ROUTE_SAFE_GAP_ANALYSIS.md  ROUTE_SAFE_SUMMARY.txt  diagrams.md  videa-overview.md  walkthrough-4a.md
hawkeye/: AUDIT_SUMMARY.txt  Dockerfile  EE_AUDIT_COMPLETE.md  EE_AUDIT_QUICK_REF.txt  EE_PWTT_INSPIRATION.md  EE_RUNTIME_AUDIT.md  EE_RUNTIME_CONTRACT_DESIGN.md  EE_RUNTIME_QUICK_REFERENCE.md  README.md  ROUTE_AVOIDANCE_IMPLEMENTATION_GUIDE.md  TEST_REPORT.md  VERIFICATION.txt  pyproject.toml  todo_update.sh
hawkeye/app/: __init__.py  main.py
hawkeye/data/: _analytics_cache.json  compute_flood_extent.py  load_groundsource.sh  load_infrastructure.py  validate_bigquery.py
hawkeye/frontend/: globe-test.html  index.html  package-lock.json  package.json  vite.config.js
hawkeye/infra/: deploy.sh
hawkeye/tests/: bigquery_inspection_results.md  conftest.py  inspect_bigquery.py  live_agent_test_results.md  test_agent_instructions.py  test_bigquery_service.py  test_bigquery_temporal_sync.py  test_earth_engine_service.py  test_ee_tile_endpoint.py  test_firestore_service.py  test_globe_control_backend.py  test_live_agent.py  test_live_session_lifecycle.py  test_main_audio_routing.py  test_maps_service.py  test_maps_service_route_avoidance.py  test_route_avoidance.py  (+1 more)
hawkeye/tests-BIGQUERY/: 01_schema_and_tables.py  02_data_quality.py  03_all_seven_queries.py  04_cascade_integration.py  05_spatial_accuracy.py
(+82 files in other folders)
